# solana-mini-launchpad

./: .gitignore  Makefile  README.md
backend/: .env.example  Cargo.toml  README_TASK.md
backend/src/: main.rs
frontend/: .gitignore  package-lock.json  package.json  remix.config.js  remix.env.d.ts  tsconfig.json  vitest.config.ts
frontend/app/: config.ts  entry.server.tsx  mintInstruction.test.ts  mintInstruction.ts  root.tsx
frontend/app/components/: TerminalApp.tsx  TerminalMint.tsx
frontend/app/routes/: _index.tsx  about.tsx
frontend/app/styles/: app.css  wallet-adapter-ui.css
program/: .gitignore  Anchor.toml  Cargo.toml  README_TASK.md  package.json  rust-toolchain.toml  tsconfig.json
program/migrations/: deploy.ts
program/programs/sol_usd_oracle/: Cargo.toml
program/programs/sol_usd_oracle/src/: lib.rs  state.rs
program/programs/token_minter/: Cargo.toml
program/programs/token_minter/src/: lib.rs
program/scripts/: get-oracle-pda.js  init-local.js
program/tests/: minter.litesvm.ts  oracle.litesvm.ts
