[workspace]
members = [ "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Pin to pre-2024-edition release; 1.8.2 is edition 2021.
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.8.2" }
