[package]
name = "token-minter"
version = "0.1.0"
description = "Anchor-based token minter with USD fee"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_minter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
mpl-token-metadata = "5.1.1"
sol-usd-oracle = { path = "../sol_usd_oracle", features = ["cpi"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
